
gbsplay HISTORY


unreleased
~~~~~~~~~~

Bugfixes:

- gbsplay:
  - handle error if an output file can't be opened on subsong change


2025/11/14  -  0.0.102
~~~~~~~~~~~~~~~~~~~~~~

Bugfixes:

- build process:
  - include xgbsplay manpage in release tarball


2025/11/13  -  0.0.101
~~~~~~~~~~~~~~~~~~~~~~

Bugfixes:

- gbs core:
  - flush buffers before subsong end so no sound gets lost
  - increase fadeout precision (don't accumulate rounding errors)
  - only add ROM replayer when dumping ROM via gbs2gb
    for usage on real hardware
  - fix off-by-one error in main_div counter comparison
    (right before refactoring that variable away)

- gbsplay:
  - VGM plugout: enable APU on startup by initializing NR52/NR51/NR50

- build process:
  - fix compiler warnings on newer compilers and stricter settings
    (mostly use 'void' instead of empty parameter declarations)
  - fix warnings about unintialized Makefile variables

Enhancements:

- gbs core:
  - refactor hardware code for reduced CPU usage


2025/06/13  -  0.0.100
~~~~~~~~~~~~~~~~~~~~~~

Bugfixes:

- build process:
  - fix manpage handling when version number contains a /
  - make 'install-*' targets self-contained
  - remove xgbsplay binary on 'make distclean'
  - fix libdir installation path when DESTDIR is set

Enhancements:

- documentation:
  - add 'PACKAGING.md' with information for package maintainers
    regarding version number detection and installation directories
  - add gbs2gb(1) manpage

- build process:
  - show installation target directories via 'make show-install-dirs'


2025/03/15  -  0.0.99
~~~~~~~~~~~~~~~~~~~~~

Bugfixes:

- configuration:
  - fix the deprecated 'loop' option to work as described in the manpage:
    'loop=2' selects range loop mode, not single loop mode

- build process:
  - fix version number detection in GitHub CI builds

Enhancements:

- automatically build Windows binaries and add them to the GitHub
  release page (marked experimental for now)

- xgbsplay: